I have made a work in progress layout of the navbar, with three buttons with each their icon

--- a/my-react-app/src/components/nav/icons.css
+++ b/my-react-app/src/components/nav/icons.css
@@ -1,5 +1,19 @@
 *{
-    height: 100vh;
-    background-color: black;
+    /* height: 100vh; */
+    
 }
-h1{color: aliceblue;}
+
+.navbar{
+    background-image: url(./navIcons/Backgroundimage1.png);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    
+}
+
+.round-buttons{
+  
+        border-radius: 50%; /* Makes the button round */
+        
+    
+}
