responsive Nav component yassine

--- a/my-react-app/client/src/components/nav/icons.css
+++ b/my-react-app/client/src/components/nav/icons.css
@@ -1,21 +1,4 @@
+*{box-sizing: border-box;}
 
 
-.navbar{
-   
-  
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    
-}
 
-.round-buttons{
-  
-        border-radius: 80%; /* Makes the button round */
-      
-        
-    
-}
-img{
-    height: 5rem;
-}
