--- a/my-react-app/client/src/components/nav/logo/logo.css
+++ b/my-react-app/client/src/components/nav/logo/logo.css
@@ -1,10 +1,4 @@
-.logo {
-    /* Add your logo styles here */
-    position: absolute;
-  top: 10px; /* Adjust the top position as needed */
-  right: 10px; /* Adjust the right position as needed */
-
-  }
+/*  */
   
   .logo img {
     width: 20rem;
