--- a/my-react-app/client/src/components/carousel/developersCards.css
+++ b/my-react-app/client/src/components/carousel/developersCards.css
@@ -3,13 +3,13 @@
     width: 50vw;
     height: 50vh;
     margin: 0 auto ;
-    background-color: black !important;
+    background-color: transparent;
     padding-left:10rem;
     padding-top: 2rem;
-    
     
 }
 .carousel{
       width: 100vw;
+      background-color: transparent;
     
 }
