--- a/my-react-app/client/src/index.css
+++ b/my-react-app/client/src/index.css
@@ -1,6 +1,12 @@
-body{
-    background-color: rgba(0, 0, 0, 0.315);
-}
+#root{
+    background-image: url('./components/carousel/images/bg.jpg'); /* Replace with the actual path to your image */
+    background-size: cover; /* This will scale the image to cover the entire body */
+    background-repeat: no-repeat; /* Prevent the image from repeating */
+    background-attachment: fixed; /* Keeps the background fixed in place while scrolling */
+    /* You can also adjust other background properties as needed */
+    height: 100vh;
+    width: 100vw;
+  }
 .cards{
     background-color: rgba(0, 0, 0, 0);
     display: flex;
