--- a/my-react-app/client/src/components/podcastPage.css
+++ b/my-react-app/client/src/components/podcastPage.css
@@ -1,10 +1,10 @@
 .podcasts{
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
-    gap: 5rem;
+    gap: 2rem;
     width: 100vw;
-    height: 40vh;
+    height: 60vh;
     margin: 0 auto;
 }
