--- a/my-react-app/client/src/components/carousel/developersCards.css
+++ b/my-react-app/client/src/components/carousel/developersCards.css
@@ -6,6 +6,7 @@
     background-color: transparent;
     padding-left:10rem;
     padding-top: 2rem;
+    filter:hue-rotate(150);
     
 }
 .carousel{
