--- a/my-react-app/client/src/components/Blog/Styles/BlogPost.css
+++ b/my-react-app/client/src/components/Blog/Styles/BlogPost.css
@@ -3,8 +3,8 @@
     border: 1px solid black;
     padding: 20px;
     margin: 0 auto;
-    
-    width: 50vw;
+    height: 85vh;
+    width: 80vw;
     display: flex;
     flex-direction: column;
     justify-content: center;
