--- a/my-react-app/client/src/components/nav/logo/logo.css
+++ b/my-react-app/client/src/components/nav/logo/logo.css
@@ -1,11 +1,21 @@
 .logo {
   display: flex;
   justify-content: center;
+  flex-direction: column;
+  gap: 2rem;
+  flex-wrap: nowrap;
+  justify-content: center;
+  align-items: center;
 
+}
+h1{
+  font-size: 4rem;
+  color: white;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 .logo img {
-  max-width: 200vw;
+  max-width: max-content;
   height: auto; 
   margin-bottom: 20px;
   border-radius: 5px;
