--- a/my-react-app/client/src/components/Blog/Styles/BlogPost.css
+++ b/my-react-app/client/src/components/Blog/Styles/BlogPost.css
@@ -6,7 +6,7 @@
 }
 
 /* Blog Post Styles */
-.blog-post {
+.dark {.blog-post {
   border-bottom: 1px solid black;
   padding: 20px;
   margin: 20px;
@@ -144,4 +144,5 @@ h3 {
   .button-50 {
     padding: 12px 50px;
   }
+}
 }
