--- a/my-react-app/client/src/components/Blog/Styles/BlogPost.css
+++ b/my-react-app/client/src/components/Blog/Styles/BlogPost.css
@@ -6,11 +6,11 @@
 }
 
 /* Blog Post Styles */
-.dark {.blog-post {
+.blog-post {
   border-bottom: 1px solid black;
   padding: 20px;
   margin: 20px;
-  background-color: white;
+  background-color: transparent;
   border-radius: 5px;
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
 }
@@ -19,13 +19,13 @@
   font-size: 24px;
   margin-bottom: 10px;
   border-bottom: 1px solid black;
-  color: #000;
+  color:white;
 }
 
 .blog-post p {
   font-size: 1.1rem;
   line-height: 1.5;
-  color:#000
+  color:white;
   
 }
 
@@ -144,5 +144,4 @@ h3 {
   .button-50 {
     padding: 12px 50px;
   }
-}
 }
