--- a/my-react-app/client/src/components/signup/login.css
+++ b/my-react-app/client/src/components/signup/login.css
@@ -1,3 +1,13 @@
 #form1-password:focus {
     border-color: whitesmoke; /* Change 'blue' to your desired color */
   }
+
+ .login{
+  background-color: transparent;
+  margin: 0 auto;
+  border-radius: 10px;
+  overflow: hidden;  /* Ensure no child elements overflow the rounded corners */
+  width: 80%;
+  box-shadow: 0 0 10px 5px rgba(255, 255, 255, 0.3);
+  justify-content: center;
+ }
