--- a/my-react-app/client/src/components/Blog/Styles/BlogPost.css
+++ b/my-react-app/client/src/components/Blog/Styles/BlogPost.css
@@ -3,6 +3,17 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+ 
+}
+
+.blog{
+  background-color: transparent;
+  margin: 0 auto;
+  border-radius: 10px;
+  overflow: hidden;  /* Ensure no child elements overflow the rounded corners */
+  width: 80%;
+  box-shadow: 0 0 10px 5px rgba(255, 255, 255, 0.3);
+  justify-content: center;
 }
 
 /* Blog Post Styles */
@@ -26,6 +37,7 @@
   font-size: 1.1rem;
   line-height: 1.5;
   color:white;
+  
   
 }
 
@@ -74,6 +86,7 @@
   align-items: center;
   color: #000;
   gap: 2rem;
+  
 }
 
 .comment-flexbox {
