--- a/my-react-app/client/src/components/carousel/developersCards.css
+++ b/my-react-app/client/src/components/carousel/developersCards.css
@@ -28,6 +28,7 @@ body {
     overflow: hidden;  /* Ensure no child elements overflow the rounded corners */
     width: 80%;
     box-shadow: 0 0 10px 5px rgba(255, 255, 255, 0.3);
+    justify-content: center;
 }
 
 /* Image Styling */
