--- a/my-react-app/client/src/components/contact/contactForm.css
+++ b/my-react-app/client/src/components/contact/contactForm.css
@@ -6,9 +6,10 @@
   }
 
 .contactForm{
+  padding: 10px;
     background-color: transparent;
     margin: 0 auto;
-    border-radius: 10px;
+    border-radius: 5px;
     overflow: hidden;  /* Ensure no child elements overflow the rounded corners */
     width: 80%;
     box-shadow: 0 0 10px 5px rgba(255, 255, 255, 0.3);
