--- a/my-react-app/client/src/components/Blog/Styles/BlogPost.css
+++ b/my-react-app/client/src/components/Blog/Styles/BlogPost.css
@@ -13,26 +13,27 @@
   width: 80%;
   box-shadow: 0 0 10px 5px rgba(255, 255, 255, 0.3);
   justify-content: center;
+  
 }
 /* Blog Post Styles */
 .blog-post {
   border-bottom: 1px solid black;
   padding: 20px;
   margin: 20px;
-  background-color: white;
+  
   border-radius: 5px;
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
 }
 .blog-post h2 {
   font-size: 24px;
   margin-bottom: 10px;
-  border-bottom: 1px solid black;
-  color: #000;
+  border-bottom: 1px solid whitesmoke;
+  color:white;
 }
 .blog-post p {
   font-size: 1.1rem;
   line-height: 1.5;
-
+text-align: start;
   color:white;
   
   
@@ -42,7 +43,7 @@
 .comment-list {
   margin-top: 20px;
   padding-top: 20px;
-  border-bottom: 1px solid black;
+  border-bottom: 1px solid whitesmoke;
   border-top: 1px solid black;
   margin-bottom: 5rem;
 }
