--- a/my-react-app/client/src/components/podcastCard/podcastCard.css
+++ b/my-react-app/client/src/components/podcastCard/podcastCard.css
@@ -1,14 +1,26 @@
-.podcasts {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(300px, 3fr)); /* This will auto-adjust the number of cards per row based on the card's min-width of 300px */
-    gap: 20px; /* Gap between each card */
-    padding: 20px; /* Padding around the entire grid */
-    box-sizing: border-box; /* Makes sure padding doesn't add extra width */
-    max-width: 80vw; /* Ensure it doesn't overflow the viewport width */
-    box-shadow: 0 0 10px 5px rgba(255, 255, 255, 0.3);
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+   
+  }
+
+  .card-example-card {
+    background-color: transparent;
     margin: 0 auto;
     border-radius: 10px;
-    overflow: hidden; 
+    overflow: hidden;
+    width: 80%;
+    box-shadow: 0 0 10px 5px rgba(255, 255, 255, 0.3);
+    justify-content: center;
+  }
+
+.podcasts {
+    display: grid;
+    grid-template-rows: repeat(auto-fill, minmax(300px, 3fr)); /* This will auto-adjust the number of cards per row based on the card's min-width of 300px */
+    gap: 20px; /* Gap between each card */
+    
+   
 }
 
 /* Optional: Some styling for better appearance on larger screens */
